# app/rest/bootstrap/router.go
@@ -59,7 +59,7 @@ func (r *Router) routerSetup(server *ServerHTTP) {
 
 	trxHandler := r.trxHandler
 	trx := e.Group("/transaction")
-	trxMerchant := trx.Group("/merchant/:id", validateToken, jwtMiddleware)
+	trxMerchant := trx.Group("/merchant/:merchant_id", validateToken, jwtMiddleware)
 	trxMerchant.GET("/omzet", trxHandler.MerchantOmzetGet)
 	trxOutlet := trx.Group("/outlet/:id", validateToken, jwtMiddleware)
 	trxOutlet.GET("/omzet", trxHandler.OutletOmzetGet)
