# app/rest/handler/transaction/handler.go
@@ -45,13 +45,13 @@ func New(fw echoFW.IEcho, log *logCtx.Log, trxService trxService.IService, confi
 // @Accept json
 // @Produce json
 // @Security BearerAuth
-// @Param       id path int true "Merchant ID"
+// @Param       merchant_id path int true "Merchant ID"
 // @Param       parameter query commonEntity.Request true "Query Param"
 // @Param       parameter query reqTrxCore.MerchantOmzetGet true "Query Param"
 // @Success		200	{object}	resPkg.Response{data=[]resTrxCore.MerchantOmzet}
 // @Failure     400 {object}	resPkg.Response{data=nil}
 // @Failure     500 {object}	resPkg.Response{data=nil}
-// @Router		/transaction/merchant/{id}/omzet [get]
+// @Router		/transaction/merchant/{merchant_id}/omzet [get]
 func (h *Handler) MerchantOmzetGet(echoCtx echo.Context) error {
 	ctx, err := ctx.NewHTTP(echoCtx.Request().Context(), h.log, echoCtx.Request().RequestURI)
 	if err != nil {
